# python-avance-portfolio

./: .gitignore
projet_final/: pyproject.toml
projet_final/data/: data.csv
projet_final/src/: main.py
projet_final/src/utils/: paths.py
projet_logs/: README.md  collect_errors.py
projet_logs/output/: bad_lines.csv  clean_data.csv
projet_logs/src/projet_logs/: main.py
seance1/projet_final/: README.md
seance1/projet_final/src/utils/: io.py
seance1/projet_logs/: parse_csv.py  pyproject.toml  requirements.txt
seance2/: books.json  books.xml  books_updated.xml  data.json  data1.json  data2.json  data_updated.json  demo_json.py  demo_xml.py  exo_conversion.py  exo_fusion.py  merged.json  projet_final.py  setup_data.py
seance4/project_parser/: __init__.py  main.py
seance4/project_parser/parsers/: __init__.py  csv_parser.py  json_parser.py  xml_parser.py
seance4/project_parser/utils/: logger.py
